# Installer

./: .gitignore  README.md  build.sbt
defaults/mac/: Makefile  defaults.mm
defaults/windows/: build.bat  defaults.cpp
iconext/: CMakeLists.txt  iconext.h
iconext/mac/: iconext.mm
iconext/windows/: iconext.cpp
lib/: libiconext.dylib
project/: Dist.scala
src/main/: AddCard.scala  AppCard.scala  AppConfig.scala  Button.scala  Defaults.scala  Dropdown.scala  IconExt.scala  Install.scala  Main.scala  MainWindow.scala  OptionPane.scala  Prefs.scala  ProgressDialog.scala  Request.scala  ScrollBar.scala  ScrollPane.scala  Theme.scala  Utils.scala
src/main/resources/defaults/linux/amd64/: mimetypes.xml
src/main/resources/defaults/linux/i386/: defaults.sh
src/main/resources/defaults/mac/aarch64/: defaults
src/main/resources/defaults/mac/x86_64/: defaults
